// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`medications reducers > creates new entry with given condition id 1`] = `
{
  "foo": {
    "comments": "",
    "dose": "",
    "drugName": "foo",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": [],
    "startYear": -1,
  },
  "uuid1": {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers > deletes medication entry 1`] = `{}`;

exports[`medications reducers > updates comments 1`] = `
{
  "uuid1": {
    "comments": "newComments",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers > updates currently taking 1`] = `
{
  "uuid1": {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "NO",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers > updates dose 1`] = `
{
  "uuid1": {
    "comments": "",
    "dose": "newDose",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers > updates drug name 1`] = `
{
  "uuid1": {
    "comments": "",
    "dose": "",
    "drugName": "newDrugName",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers > updates end year 1`] = `
{
  "uuid1": {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": 2020,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers > updates reason for taking 1`] = `
{
  "uuid1": {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "newReasonForTaking",
    "schedule": "",
    "sideEffects": [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers > updates schedule 1`] = `
{
  "uuid1": {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "newSchedule",
    "sideEffects": [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers > updates side effects 1`] = `
{
  "uuid1": {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": [
      "newSideEffect",
    ],
    "startYear": -1,
  },
}
`;

exports[`medications reducers > updates start year 1`] = `
{
  "uuid1": {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": [],
    "startYear": 2019,
  },
}
`;
